@@ -1,0 +1,19 @@
+<html>
+<head>
+<script>
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+</script>
+<style>
+span {
+  display: table-column;
+  -webkit-transform-style: preserve-3d;
+}
+</style>
+</head>
+<body>
+<span></span>
+<p>Test for bug <a href="https://bugs.webkit.org/show_bug.cgi?id=51465">51465</a>: chrome.dll!WebCore::RenderLayer::currentTransform ReadAV@NULL (8968fc97874fa23b6799ff8f09c142e4)</p>
+<p>If it did not crash, this test has PASSED</p>
+</body>
+</html>
